# book

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CNAME  Makefile  README.md  _config.yml  _toc.yml  about.html  about.md  build-deploy.sh  build-local.sh  build.sh  contact.html  contact.md  deploy.sh  deploy2.sh  intro.md  objects.inv  our-work.md  pyproject.toml  searchindex.js
.github/workflows/: build-deploy.yml  deploy-dev.yml  validate.yml
.well-known/: did.json
_build/.doctrees/: about.doctree  contact.doctree  environment.pickle  guardrailing.doctree  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree  our-work.doctree
_build/html/: .buildinfo  about.html  contact.html  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  our-work.html  search.html  searchindex.js
_build/html/_sources/: about.md  contact.md  intro.md  markdown.md
_build/html/_static/: custom.css  theme.css
_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
_static/: custom.css
dev/: README.html  genindex.html  objects.inv  search.html  searchindex.js
dev/_static/: custom.css
drafts/: guardrailing.md
samples/: notebooks.ipynb
